--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
 		<div class="login-content">
 			<form #loginForm="ngForm" (submit)="loginClicked(loginForm)">
 				<img src="../../assets/Img/axar-logo1.png">
-				<h2 class="title">Welcome To Insiderlens</h2>
+				<h2 class="title">Insiderlens License</h2>
            		<div class="input-div one">
            		   <div class="i">
            		   		<i class="fas fa-user"></i>
@@ -25,8 +25,8 @@
            		    	<h5>Password</h5>
 						   <input type="password" name="Password" ngModel  id="password" class="input form-control">			
             	   </div>
-            	</div>
-				<a routerLink="/">Forgot Password?</a>
+				</div>
+				<br>
 				<div class="form-group">
 				<button  class="btn">Login</button>
 			    </div >
